quote and contact

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="get-a-quote.html">Get a Quote</a>
+      <a  href={% url 'root:quote' %}> Get a Quote</a>
 
     </div>
   </header>
