--- a/templates/root/get-a-quote.html
+++ b/templates/root/get-a-quote.html
@@ -6,7 +6,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.jpg);">
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url({% static 'assets/img/page-title-bg.jpg' %});">
       <div class="container position-relative">
         <h1>Get a Quote</h1>
         <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
@@ -26,10 +26,11 @@
 
         <div class="row g-0" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-5 quote-bg" style="background-image: url(assets/img/quote-bg.jpg);"></div>
+          <div class="col-lg-5 quote-bg" style={% static 'assets/img/quote-bg.jpg' %}></div>
 
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="200">
-            <form action="forms/get-a-quote.php" method="post" class="php-email-form">
+            <form  method="post" >
+            {% csrf_token %}
               <h3>Get a quote</h3>
               <p>Vel nobis odio laboriosam et hic voluptatem. Inventore vitae totam. Rerum repellendus enim linead sero park flows.</p>
 
@@ -78,6 +79,9 @@
 
                   <button type="submit">Get a quote</button>
                 </div>
+                {% for message in messages %}
+                  {{message}}
+                {% endfor %}
 
               </div>
             </form>
