--- a/templates/base.html
+++ b/templates/base.html
@@ -72,12 +72,12 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li>
-          <li style="color: aliceblue;"><a href={% url "root:contactus" %}>Contact</a></li>
+          <li><a href={% url "root:contactus" %}>Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a  href={% url 'root:quote' %}> Get a Quote</a>
+      <a class="btn-getstarted" href={% url 'root:quote' %}> Get a Quote</a>
 
     </div>
   </header>
@@ -89,7 +89,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
+          <a href={% url "root:home" %}class="logo d-flex align-items-center">
             <span class="sitename">Logis</span>
           </a>
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
@@ -104,9 +104,9 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href={% url "root:home" %}>Home</a></li>
+            <li><a href={% url "root:about" %}>About us</a></li>
+            <li><a href={% url "services:services" %}>Services</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
           </ul>
