--- a/templates/root/about.html
+++ b/templates/root/about.html
@@ -127,7 +127,7 @@
           {% for agent in agents  %}
           <div class="col-lg-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img {{agent.image.url}} class="img-fluid" alt="">
+              <img src={{agent.image.url}} class="img-fluid" alt="">
               <div class="member-content">
                 <h4>{{agent.name}}</h4>
                 <span>{{agent.job}}</span>
