--- a/templates/base.html
+++ b/templates/base.html
@@ -55,21 +55,11 @@
           <li><a href={% url "root:home" %} class="active">Home<br></a></li>
           <li><a href={% url "root:about" %}>About</a></li>
           <li><a href={% url "services:services" %}>Services</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#"><span>دسته بندی</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+               {% for category in categories %}
+              <li><a href={% url "services:services-category" category=category.title %}>{{category.title}}</a></li>
+              {% endfor %}
             </ul>
           </li>
           <li><a href={% url "root:contactus" %}>Contact</a></li>
