--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -38,7 +38,7 @@
               <p><input type="text" name="username" placeholder="Username" required="required"></p>
               <p><input type="password" name="password" placeholder="Password" required="required"></p>
               <p><button type="submit">Login</button></p>
-              <p><a href="#">Forgot Password?</a></p>
+              <p><a href={% url "accounts:reset_password" %}>Forgot Password?</a></p>
           </form>
           {% for message in messages %}
               <h2 style="color:red;style:bold">{{ message }}</h2>
