--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
           <li><a href={% url "root:home" %} class="active">Home<br></a></li>
           <li><a href={% url "root:about" %}>About</a></li>
           <li><a href={% url "services:services" %}>Services</a></li>
-          <li class="dropdown"><a href="#"><span>دسته بندی</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#"><span>category</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
                {% for category in categories %}
               <li><a href={% url "services:services-category" category=category.title %}>{{category.title}}</a></li>
